[package]
name = "all_in_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
# wasm-bindgen = "0.2.99"
serde = {version = "1.0.217"}
bevy_renet2 = {version = "0.1.1", features = ["netcode"]}
renet2_netcode = {version = "0.1.1", features = ["native_transport"]}
bincode ={ version = "1.3.3"}
# renet2_netcode = {version = "0.1.0",default-features = false}


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3